Fix z-index on map

--- a/resources/sass/freyja/header.scss
+++ b/resources/sass/freyja/header.scss
@@ -1,6 +1,5 @@
 .bg-navbar {
     background-color: var(--main-navbar-background);
-    z-index: 50;
 }
 .bg-lookup {
     background-color: var(--main-navbar-background);
