--- a/resources/sass/map-v3.scss
+++ b/resources/sass/map-v3.scss
@@ -51,7 +51,6 @@ $mapSidebarWidth: 380px;
 
 .btn-map-explore {
     color: #fff !important;
-    z-index: 999;
 }
 
 .marker.size-1 {
